--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -33,7 +33,6 @@ jobs:
     runs-on: [ ubuntu-latest ]
     outputs:
       githubOwner: ${{ steps.check.outputs.githubOwner }}
-      testJobs: ${{ steps.check.outputs.testJobs }}
     steps:
       - name: Check secrets
         id: check
@@ -73,18 +72,6 @@ jobs:
           }
           Add-Content -Path $env:GITHUB_OUTPUT -Value "githubOwner=$githubOwner"
           Write-Host "githubOwner=$githubOwner"
-          $testJobs = @()
-          if ('${{ github.event.inputs.runScenarios }}' == 'Y'') { $testJobs += 'Scenario' }
-          if ('${{ github.event.inputs.runTestMatrix }}' == 'Y'') { $testJobs += 'TestALGo' }
-          if ('${{ github.event.inputs.runUpgradeTests }}' == 'Y'') { $testJobs += 'TestALGoUpgrade' }
-          if ($testJobs.Count -eq 1) {
-            $testJobsJSon = "[$($testJobs | ConvertTo-Json -compress)]"
-          }
-          else {
-            $testJobsJSon = $testJobs | ConvertTo-Json -compress
-          }
-          Add-Content -Path $env:GITHUB_OUTPUT -Value "testJobs=$testJobsJson"
-          Write-Host "testJobs=$testJobsJson"
 
   SetupRepositories:
     runs-on: [ ubuntu-latest ]
@@ -146,7 +133,6 @@ jobs:
   Scenario:
     runs-on: [ ubuntu-latest ]
     needs: [ Check, SetupRepositories, Analyze ]
-    if: github.event.inputs.runScenarios == 'Y'
     strategy:
       matrix:
         scenario: ${{ fromJson(needs.Analyze.outputs.scenarios) }}
@@ -166,14 +152,14 @@ jobs:
           Write-Host "Repo URL: https://github.com/${{ needs.Check.outputs.githubowner }}/$repoName"
 
       - name: Run test
+        if: github.event.inputs.runScenarios == 'Y'
         run: |
           $errorActionPreference = "STOP"
           . (Join-Path "." "e2eTests/scenarios/${{ matrix.scenario }}/runtest.ps1") -githubOwner '${{ needs.Check.outputs.githubowner }}' -repoName ${{ steps.calculateParams.outputs.repoName }} -token '${{ Secrets.OrgPAT }}' -InsiderSasToken '${{ Secrets.InsiderSasToken }}' -pteTemplate '${{ needs.SetupRepositories.outputs.perTenantExtensionRepo }}' -appSourceTemplate '${{ needs.SetupRepositories.outputs.appSourceAppRepo }}' -adminCenterApiCredentials '${{ Secrets.adminCenterApiCredentials }}' -licenseFileUrl '${{ Secrets.licenseFileUrl }}'
 
-  TestALGo:
+  TestAlGo:
     runs-on: [ ubuntu-latest ]
     needs: [ Check, SetupRepositories ]
-    if: github.event.inputs.runTestMatrix == 'Y'
     strategy:
       matrix:
         visibility: [ 'private', 'public' ]
@@ -211,14 +197,14 @@ jobs:
           Write-Host "Repo URL: https://github.com/${{ needs.Check.outputs.githubowner }}/$repoName"
 
       - name: Run tests
+        if: github.event.inputs.runTestMatrix == 'Y'
         run: |
           $errorActionPreference = "STOP"
           . (Join-Path "." "e2eTests/Test-AL-Go.ps1") -githubOwner '${{ needs.Check.outputs.githubowner }}' -repoName ${{ steps.calculateParams.outputs.repoName }} -token '${{ Secrets.OrgPAT }}' -InsiderSasToken '${{ Secrets.InsiderSasToken }}' -template ${{ steps.calculateParams.outputs.template }} -adminCenterApiCredentials ${{ steps.calculateParams.outputs.adminCenterApiCredentials }} -licenseFileUrl ${{ steps.calculateParams.outputs.licenseFileUrl }} -multiProject:('${{ matrix.style }}' -eq 'multiProject') -appSource:('${{ matrix.type }}' -eq 'appSourceApp') -linux:('${{ matrix.os }}' -eq 'linux') -private:('${{ matrix.visibility }}' -eq 'private')
 
-  TestALGoUpgrade:
+  TestAlGoUpgrade:
     runs-on: [ ubuntu-latest ]
     needs: [ Check, SetupRepositories, Analyze ]
-    if: github.event.inputs.runUpgradeTests == 'Y'
     strategy:
       matrix:
         release: ${{ fromJson(needs.Analyze.outputs.releases) }}
@@ -252,13 +238,14 @@ jobs:
           Write-Host "Repo URL: https://github.com/${{ needs.Check.outputs.githubowner }}/$repoName"
 
       - name: Run tests
+        if: github.event.inputs.runUpgradeTests == 'Y'
         run: |
           $errorActionPreference = "STOP"
           . (Join-Path "." "e2eTests/Test-AL-Go-Upgrade.ps1") -githubOwner '${{ needs.Check.outputs.githubowner }}' -repoName ${{ steps.calculateParams.outputs.repoName }} -token '${{ Secrets.OrgPAT }}' -template ${{ steps.calculateParams.outputs.template }} -licenseFileUrl ${{ steps.calculateParams.outputs.licenseFileUrl }} -appSource:('${{ matrix.type }}' -eq 'appSourceApp') -release '${{ matrix.release }}' -path ${{ steps.calculateParams.outputs.path }}
 
   RemoveRepositories:
     runs-on: [ ubuntu-latest ]
-    needs: ${{ fromJson(needs.Check.outputs.testJobs) }}
+    needs: [ Check, SetupRepositories, TestAlGo, TestAlGoUpgrade, Scenario ]
     if: always() && (${{ needs.SetupRepositories.result == 'Success' }})
     steps:
       - uses: actions/checkout@v3
