--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -106,7 +106,7 @@ jobs:
         id: Analyze
         run: |
           $errorActionPreference = "STOP"
-          if ('${{ github.event.inputs.runUpgradeTests }}' == 'Y') {
+          if ('${{ github.event.inputs.runUpgradeTests }}' -eq 'Y') {
             $modulePath = Join-Path "." "e2eTests\e2eTestHelper.psm1" -resolve
             Import-Module $modulePath -DisableNameChecking
             SetTokenAndRepository -githubOwner '${{ needs.Check.outputs.githubowner }}' -token '${{ Secrets.OrgPAT }}' -repository "microsoft/AL-Go"
