remove unnecessary files

--- a/e2eTests/scenarios/BuildOrder/content/BO-DK/.AL-Go/settings.json
+++ b/e2eTests/scenarios/BuildOrder/content/BO-DK/.AL-Go/settings.json
@@ -1,9 +1,3 @@
 ﻿{
-    "country":  "dk",
-    "appFolders":  [
-
-                   ],
-    "testFolders":  [
-
-                    ]
+    "country":  "dk"
 }
