--- a/e2eTests/scenarios/BuildOrder/content/BO-W1/.AL-Go/settings.json
+++ b/e2eTests/scenarios/BuildOrder/content/BO-W1/.AL-Go/settings.json
@@ -1,9 +1,3 @@
 ﻿{
-    "country":  "w1",
-    "appFolders":  [
-
-                   ],
-    "testFolders":  [
-
-                    ]
+    "country":  "w1"
 }
