--- a/e2eTests/scenarios/BuildOrder/content/Common/.AL-Go/settings.json
+++ b/e2eTests/scenarios/BuildOrder/content/Common/.AL-Go/settings.json
@@ -1,9 +1,3 @@
 {
-    "country":  "w1",
-    "appFolders":  [
-    ],
-    "testFolders":  [
-    ],
-    "bcptTestFolders":  [
-    ]
+    "country":  "w1"
 }
