--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -22,7 +22,7 @@ on:
       bcContainerHelperVersion:
         description: Which version of BcContainerHelper to use? (latest, preview, private or a specific version number - default is latest)
         required: false
-        default: ''
+        default: 'preview'
 
 defaults:
   run:
