--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -28,6 +28,10 @@ defaults:
   run:
     shell: pwsh
 
+env:
+  scenarioApplicationVersion = "21.0.0.0"
+  scenarioRuntimeVersion = "10.0"
+
 jobs:
   Check:
     runs-on: [ ubuntu-latest ]
@@ -138,13 +142,28 @@ jobs:
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
+        if: github.event.inputs.runScenarios == 'Y'
         with:
           ref: ${{ github.event.inputs.ref }}
 
       - name: Calculate parameters
+        if: github.event.inputs.runScenarios == 'Y'
         id: calculateParams
         run: |
           $errorActionPreference = "STOP"
+          # To allow more than one end-2-end test simultanously: replace AppIDs with new GUIDs and adjust dependencies
+          # Additionally, set application and runtime in all app.json files
+          $path = Join-Path "." "e2eTests/scenarios/${{ matrix.scenario }}"
+          Get-ChildItem -Path $path -include 'app.json' -Recurse | ForEach-Object {
+              $appJson = Get-Content -Path $_.FullName -Encoding UTF8 | ConvertFrom-Json
+              $newId = ([GUID]::NewGuid().ToString())
+              Replace-StringInFiles -path $path -include 'app.json' -search $appJson.Id -replace $newId
+              Write-Host "$($_.Directory) -> $newId"
+              $appJson.id = $newId
+              $appJson.application = $ENV:scenarioApplicationVersion
+              $appJson.runtime = $ENV:runtimeVersion
+              Set-Content -Path $_.FullName -Value ($appJson | ConvertTo-Json -Depth 99) -Encoding UTF8
+          }
           $reponame = [System.IO.Path]::GetFileNameWithoutExtension([System.IO.Path]::GetTempFileName())
           Add-Content -Path $env:GITHUB_OUTPUT -Value "repoName='$repoName'"
           Write-Host "repoName='$repoName'"
@@ -153,8 +172,15 @@ jobs:
       - name: Run test
         if: github.event.inputs.runScenarios == 'Y'
         run: |
-          $errorActionPreference = "STOP"
-          . (Join-Path "." "e2eTests/scenarios/${{ matrix.scenario }}/runtest.ps1") -github -githubOwner '${{ needs.Check.outputs.githubowner }}' -repoName ${{ steps.calculateParams.outputs.repoName }} -token '${{ Secrets.OrgPAT }}' -InsiderSasToken '${{ Secrets.InsiderSasToken }}' -pteTemplate '${{ needs.Check.outputs.githubowner }}/${{ needs.SetupRepositories.outputs.perTenantExtensionRepo }}' -appSourceTemplate '${{ needs.Check.outputs.githubowner }}/${{ needs.SetupRepositories.outputs.appSourceAppRepo }}' -adminCenterApiToken '${{ Secrets.adminCenterApiCredentials }}' -licenseFileUrl '${{ Secrets.licenseFileUrl }}'
+          try {
+            . (Join-Path "." "e2eTests/scenarios/${{ matrix.scenario }}/runtest.ps1") -github -githubOwner '${{ needs.Check.outputs.githubowner }}' -repoName ${{ steps.calculateParams.outputs.repoName }} -token '${{ Secrets.OrgPAT }}' -InsiderSasToken '${{ Secrets.InsiderSasToken }}' -pteTemplate '${{ needs.Check.outputs.githubowner }}/${{ needs.SetupRepositories.outputs.perTenantExtensionRepo }}' -appSourceTemplate '${{ needs.Check.outputs.githubowner }}/${{ needs.SetupRepositories.outputs.appSourceAppRepo }}' -adminCenterApiToken '${{ Secrets.adminCenterApiCredentials }}' -licenseFileUrl '${{ Secrets.licenseFileUrl }}'
+          }
+          catch {
+            Write-Host $_.Exception.Message
+            Write-Host $_.ScriptStackTrace
+            Write-Host "::Error::$($_.Exception.Message)"
+            $host.SetShouldExit(1)
+          }
 
   TestAlGo:
     runs-on: [ ubuntu-latest ]
@@ -168,10 +194,12 @@ jobs:
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
+        if: github.event.inputs.runTestMatrix == 'Y'
         with:
           ref: ${{ github.event.inputs.ref }}
 
       - name: Calculate parameters
+        if: github.event.inputs.runTestMatrix == 'Y'
         id: calculateParams
         run: |
           $errorActionPreference = "STOP"
@@ -198,8 +226,15 @@ jobs:
       - name: Run tests
         if: github.event.inputs.runTestMatrix == 'Y'
         run: |
-          $errorActionPreference = "STOP"
-          . (Join-Path "." "e2eTests/Test-AL-Go.ps1") -github -githubOwner '${{ needs.Check.outputs.githubowner }}' -repoName ${{ steps.calculateParams.outputs.repoName }} -token '${{ Secrets.OrgPAT }}' -InsiderSasToken '${{ Secrets.InsiderSasToken }}' -template ${{ steps.calculateParams.outputs.template }} -adminCenterApiToken ${{ steps.calculateParams.outputs.adminCenterApiCredentials }} -licenseFileUrl ${{ steps.calculateParams.outputs.licenseFileUrl }} -multiProject:('${{ matrix.style }}' -eq 'multiProject') -appSource:('${{ matrix.type }}' -eq 'appSourceApp') -linux:('${{ matrix.os }}' -eq 'linux') -private:('${{ matrix.visibility }}' -eq 'private')
+          try {
+            . (Join-Path "." "e2eTests/Test-AL-Go.ps1") -github -githubOwner '${{ needs.Check.outputs.githubowner }}' -repoName ${{ steps.calculateParams.outputs.repoName }} -token '${{ Secrets.OrgPAT }}' -InsiderSasToken '${{ Secrets.InsiderSasToken }}' -template ${{ steps.calculateParams.outputs.template }} -adminCenterApiToken ${{ steps.calculateParams.outputs.adminCenterApiCredentials }} -licenseFileUrl ${{ steps.calculateParams.outputs.licenseFileUrl }} -multiProject:('${{ matrix.style }}' -eq 'multiProject') -appSource:('${{ matrix.type }}' -eq 'appSourceApp') -linux:('${{ matrix.os }}' -eq 'linux') -private:('${{ matrix.visibility }}' -eq 'private')
+          }
+          catch {
+            Write-Host $_.Exception.Message
+            Write-Host $_.ScriptStackTrace
+            Write-Host "::Error::$($_.Exception.Message)"
+            $host.SetShouldExit(1)
+          }
 
   TestAlGoUpgrade:
     runs-on: [ ubuntu-latest ]
@@ -211,10 +246,12 @@ jobs:
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
+        if: github.event.inputs.runUpgradeTests == 'Y'
         with:
           ref: ${{ github.event.inputs.ref }}
 
       - name: Calculate parameters
+        if: github.event.inputs.runUpgradeTests == 'Y'
         id: calculateParams
         run: |
           $errorActionPreference = "STOP"
@@ -239,8 +276,15 @@ jobs:
       - name: Run tests
         if: github.event.inputs.runUpgradeTests == 'Y'
         run: |
-          $errorActionPreference = "STOP"
-          . (Join-Path "." "e2eTests/Test-AL-Go-Upgrade.ps1") -github -githubOwner '${{ needs.Check.outputs.githubowner }}' -repoName ${{ steps.calculateParams.outputs.repoName }} -token '${{ Secrets.OrgPAT }}' -template ${{ steps.calculateParams.outputs.template }} -licenseFileUrl ${{ steps.calculateParams.outputs.licenseFileUrl }} -appSource:('${{ matrix.type }}' -eq 'appSourceApp') -release '${{ matrix.release }}' -contentPath ${{ steps.calculateParams.outputs.contentPath }}
+          try {
+            . (Join-Path "." "e2eTests/Test-AL-Go-Upgrade.ps1") -github -githubOwner '${{ needs.Check.outputs.githubowner }}' -repoName ${{ steps.calculateParams.outputs.repoName }} -token '${{ Secrets.OrgPAT }}' -template ${{ steps.calculateParams.outputs.template }} -licenseFileUrl ${{ steps.calculateParams.outputs.licenseFileUrl }} -appSource:('${{ matrix.type }}' -eq 'appSourceApp') -release '${{ matrix.release }}' -contentPath ${{ steps.calculateParams.outputs.contentPath }}
+          }
+          catch {
+            Write-Host $_.Exception.Message
+            Write-Host $_.ScriptStackTrace
+            Write-Host "::Error::$($_.Exception.Message)"
+            $host.SetShouldExit(1)
+          }
 
   RemoveRepositories:
     runs-on: [ ubuntu-latest ]
