--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -141,6 +141,11 @@ jobs:
         scenario: ${{ fromJson(needs.Analyze.outputs.scenarios) }}
       fail-fast: false
     steps:
+      - name: Skipped
+        if: github.event.inputs.runScenarios != 'Y'
+        run: |
+          Write-Host "Skipped"
+
       - uses: actions/checkout@v3
         if: github.event.inputs.runScenarios == 'Y'
         with:
@@ -194,6 +199,11 @@ jobs:
         os: [ 'linux', 'windows' ]
       fail-fast: false
     steps:
+      - name: Skipped
+        if: github.event.inputs.runTestMatrix != 'Y'
+        run: |
+          Write-Host "Skipped"
+
       - uses: actions/checkout@v3
         if: github.event.inputs.runTestMatrix == 'Y'
         with:
@@ -246,6 +256,11 @@ jobs:
         type: [ 'appSourceApp', 'PTE' ]
       fail-fast: false
     steps:
+      - name: Skipped
+        if: github.event.inputs.runUpgradeTests != 'Y'
+        run: |
+          Write-Host "Skipped"
+
       - uses: actions/checkout@v3
         if: github.event.inputs.runUpgradeTests == 'Y'
         with:
