--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -162,7 +162,7 @@ jobs:
               Write-Host "$($_.Directory) -> $newId"
               $appJson.id = $newId
               $appJson.application = $ENV:scenarioApplicationVersion
-              $appJson.runtime = $ENV:runtimeVersion
+              $appJson.runtime = $ENV:scenarioRuntimeVersion
               Set-Content -Path $_.FullName -Value ($appJson | ConvertTo-Json -Depth 99) -Encoding UTF8
           }
           $reponame = [System.IO.Path]::GetFileNameWithoutExtension([System.IO.Path]::GetTempFileName())
