more unix tests

--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -43,6 +43,7 @@ jobs:
         run: |
           $s = @{ "a" = "b"; "c" = "d"}
           $json = $s | ConvertTo-Json
+          Write-Host "'$json'"
           Write-Host $json.Length
 
           $err = $false
