--- a/.github/workflows/CleanupTempRepos.yaml
+++ b/.github/workflows/CleanupTempRepos.yaml
@@ -61,7 +61,7 @@ jobs:
               Write-Host "https://github.com/$repo"
               @((invoke-gh api -H "Accept: application/vnd.github+json" /orgs/$owner/packages?package_type=nuget -silent -returnvalue -ErrorAction SilentlyContinue | ConvertFrom-Json)) | Where-Object { ($_.PSObject.Properties.Name -eq 'repository') -and ($_.repository.full_name -eq $repo) } | ForEach-Object {
                   Write-Host "- package $($_.name)"
-              #    invoke-gh api --method DELETE -H "Accept: application/vnd.github+json" /orgs/$owner/packages/nuget/$($_.name)
+                  invoke-gh api --method DELETE -H "Accept: application/vnd.github+json" /orgs/$owner/packages/nuget/$($_.name)
               }
-              #invoke-gh repo delete "https://github.com/$repo" --confirm | Out-Host
+              invoke-gh repo delete "https://github.com/$repo" --confirm | Out-Host
           }
