--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -134,7 +134,7 @@ jobs:
           Write-Host "scenarios=$scenariosJson"
 
   Scenario:
-    runs-on: [ ubuntu-latest ]
+    runs-on: [ windows-latest ]
     needs: [ Check, SetupRepositories, Analyze ]
     strategy:
       matrix:
