--- a/.github/workflows/CleanupTempRepos.yaml
+++ b/.github/workflows/CleanupTempRepos.yaml
@@ -60,9 +60,11 @@ jobs:
               $repo = $_
               Write-Host "https://github.com/$repo"
               $repoOwner = $repo.Split('/')[0]
-              @((invoke-gh api -H "Accept: application/vnd.github+json" /orgs/$repoOwner/packages?package_type=nuget -silent -returnvalue -ErrorAction SilentlyContinue | ConvertFrom-Json)) | Where-Object { ($_.PSObject.Properties.Name -eq 'repository') -and ($_.repository.full_name -eq $repo) } | ForEach-Object {
+              Write-Host "/orgs/$repoOwner/packages?package_type=nuget"
+              @((invoke-gh api -H "Accept: application/vnd.github+json" "/orgs/$repoOwner/packages?package_type=nuget" -silent -returnvalue -ErrorAction SilentlyContinue | ConvertFrom-Json)) | Where-Object { ($_.PSObject.Properties.Name -eq 'repository') -and ($_.repository.full_name -eq $repo) } | ForEach-Object {
                   Write-Host "- package $($_.name)"
-                  invoke-gh api --method DELETE -H "Accept: application/vnd.github+json" /orgs/$repoOwner/packages/nuget/$($_.name)
+                  Write-Host "/orgs/$repoOwner/packages/nuget/$($_.name)"
+                  invoke-gh api --method DELETE -H "Accept: application/vnd.github+json" "/orgs/$repoOwner/packages/nuget/$($_.name)"
               }
               invoke-gh repo delete "https://github.com/$repo" --confirm | Out-Host
           }
