--- a/.github/workflows/CleanupTempRepos.yaml
+++ b/.github/workflows/CleanupTempRepos.yaml
@@ -45,7 +45,7 @@ jobs:
           Write-Host "githubOwner=$githubOwner"
 
   RemoveRepositories:
-    runs-on: [ ubuntu-latest ]
+    runs-on: [ windows-latest ]
     needs: [ Check ]
     steps:
       - uses: actions/checkout@v3
@@ -54,6 +54,7 @@ jobs:
         run: |
           $errorActionPreference = "STOP"
           Import-Module (Join-Path "." "e2eTests/e2eTestHelper.psm1") -DisableNameChecking
+          invoke-gh version
           $owner = '${{ needs.Check.outputs.githubowner }}'
           $token = '${{ Secrets.OrgPAT }}'
           $ENV:GITHUB_TOKEN = $token
