--- a/.github/workflows/CleanupTempRepos.yaml
+++ b/.github/workflows/CleanupTempRepos.yaml
@@ -68,7 +68,8 @@ jobs:
                   Write-Host "- package $($_.name)"
                   Write-Host "/orgs/$repoOwner/packages/nuget/$($_.name)"
                   invoke-gh auth status
-                  invoke-gh api --method DELETE -H "Accept: application/vnd.github+json" "/orgs/$repoOwner/packages/nuget/$($_.name)"
+                  # https://github.com/cli/cli/issues/3937
+                  '' | invoke-gh api --method DELETE -H "Accept: application/vnd.github+json" "/orgs/$repoOwner/packages/nuget/$($_.name)" --input -
               }
               invoke-gh repo delete "https://github.com/$repo" --confirm | Out-Host
           }
