--- a/.github/workflows/CleanupTempRepos.yaml
+++ b/.github/workflows/CleanupTempRepos.yaml
@@ -54,21 +54,16 @@ jobs:
         run: |
           $errorActionPreference = "STOP"
           Import-Module (Join-Path "." "e2eTests/e2eTestHelper.psm1") -DisableNameChecking
-          invoke-gh version
           $owner = '${{ needs.Check.outputs.githubowner }}'
           $token = '${{ Secrets.OrgPAT }}'
-          $ENV:GITHUB_TOKEN = $token
           SetTokenAndRepository -github -githubOwner $owner -token $token -repository ''
           @(invoke-gh repo list $owner --limit 1000 -silent -returnValue) | ForEach-Object { $_.Split("`t")[0] } | Where-Object { "$_" -like "$owner/tmp*" } | ForEach-Object {
               $repo = $_
               Write-Host "https://github.com/$repo"
               $repoOwner = $repo.Split('/')[0]
-              Write-Host "/orgs/$repoOwner/packages?package_type=nuget"
               @((invoke-gh api -H "Accept: application/vnd.github+json" "/orgs/$repoOwner/packages?package_type=nuget" -silent -returnvalue -ErrorAction SilentlyContinue | ConvertFrom-Json)) | Where-Object { ($_.PSObject.Properties.Name -eq 'repository') -and ($_.repository.full_name -eq $repo) } | ForEach-Object {
                   Write-Host "- package $($_.name)"
-                  Write-Host "/orgs/$repoOwner/packages/nuget/$($_.name)"
-                  invoke-gh auth status
-                  # https://github.com/cli/cli/issues/3937
+                  # Pipe empty string into GH API --METHOD DELETE due to https://github.com/cli/cli/issues/3937
                   '' | invoke-gh api --method DELETE -H "Accept: application/vnd.github+json" "/orgs/$repoOwner/packages/nuget/$($_.name)" --input -
               }
               invoke-gh repo delete "https://github.com/$repo" --confirm | Out-Host
